<resources>
    <string name="app_name">storyApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="fav">Fav</string>
    <string name="edit">Edit</string>
    <string name="picture">picture</string>
    <string name="placeholder_text">Placeholder text</string>
    <string name="share">Share</string>
    <string name="draw">Draw</string>
    <string name="erase">Erase</string>
    <string name="contrast">Contrast</string>
    <string name="crop">Crop</string>
    <string name="adjust">adjust</string>
    <string name="rotate">rotate</string>
    <string name="todo">TODO</string>
    <string name="bright">Bright</string>
    <string name="contra">contrast</string>
    <string name="sharpness">sharpness</string>
    <string name="sharp">sharp</string>
    <string name="okay">okay</string>

    <string name="conste">const</string>
    <string name="color">color</string>
    <string name="brush_size">brush size</string>
    <string name="pen_style">pen Style</string>

        <string name="spinner">SpinnerInKotlin</string>
        <string name="selected_item">Selected item:</string>
    <string name="wide">wide</string>
    <string name="width_5">width 5</string>
    <string name="width_6">width 6</string>
    <string name="free">Free</string>
    <string name="triangle">triangle</string>
    <string name="circle">circle</string>
    <string name="doodle">doodle</string>
    <string name="square">square</string>

    <string-array name="Languages">
            <item>Java</item>
            <item>Kotlin</item>
            <item>Swift</item>
            <item>Python</item>
            <item>Scala</item>
            <item>Perl</item>
        </string-array>

    </resources>